--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
     height: 30vh;
 }
 .menuPic {
-    height: 200px;
+    height: 200px; 
     width: 300px;
 }
 section {
@@ -54,6 +54,17 @@ section.visible {
     background: transparent;
     z-index: 5000;
     color: white;
+}
+.projectTitle {
+    margin-top: 100px;
+    text-align: center;
+}
+.row {
+    margin: 40px;
+}
+.menuAbout {
+    z-index: 5000;
+    color: black;
 }
 .email {
     margin-top: 60px;
@@ -101,7 +112,29 @@ body, .carousel {
     font-size: 18px;
 }
 @media only screen and (max-width: 400px) {
-    img {
+    .mainImg {
+        height: 100vh;
         width: 100vw;
+    }
+    .header {
+        text-shadow: black 2px 2px;
+        margin-top: 100px;
+        z-index: 10000;
+        color: White;
+    }
+    h1 {
+        font-size: 36px;
+        color: black;
+    }
+    h4 {
+        font-size: 24px;
+    }
+    img {
+        width: 300px;
+        margin: auto;
+        /* overflow: hidden; */
+    }
+    .projectTitle {
+        margin-top: 20px;
     }
 }
