--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
     width: 100%;
     position: relative;
 }
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Arvo', serif;
+    text-transform: uppercase;
+}
 .parallax-container {
     height: 80vh;
     /* width: 100%; */
@@ -53,8 +57,8 @@ section.visible {
     position: absolute;
     text-align: center;
     margin: auto;
-    font-family: 'Cinzel Decorative', cursive;
 }
+
 .headerText {
     z-index: 1000;
     color: white;
@@ -159,6 +163,7 @@ body, .carousel {
 }
 .aboutMe {
     font-size: 18px;
+    font-family: 'Domine', serif;
 }
 @media only screen and (max-width: 400px) {
     .mainImg {
