--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,9 @@ section {
     opacity: 0;
     transition: opacity 1s;
 }
-
+.touchText {
+    font-size: 3vw;
+}
 section.visible { 
     opacity: 1;
 }
@@ -184,15 +186,31 @@ body, .carousel {
 .clouds-image {
     height: 30vh;
 }
+.contactForm {
+    width: 95vw;
+    margin-bottom: 90px;
+}
 .aboutMe {
     font-size: 18px;
     font-family: 'avenir';
     margin-bottom: 50px;
 }
+.containerContact {
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
+}
 @media only screen and (max-width: 460px) {
     .mainImg {
         height: 100vh;
         width: 100vw;
+    }
+    .contactForm {
+        width: 100%;
+    }
+    .touchText {
+        font-size: 28px;
+        margin: auto;
     }
     .header {
         text-shadow: black 2px 2px;
